sibcom2/01-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sibcom2-web
  namespace: sibcom2
  labels:
    app: sibcom2
  annotations:
    flux.weave.works/automated: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sibcom2
  template:
    metadata:
      namespace: sibcom2
      labels:
        app: sibcom2
    spec:
      containers:
      - name: sibcom2
        image: stillinbeta/sibcom2:1554081306
        ports:
        - containerPort: 8000
