sibcom2/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sibcom2
  name: sibcom2-service
spec:
  selector:
    app: sibcom2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
