sibcom2/02-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sibcom2-ingress
  namespace: sibcom2
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - secretName: sibcom2
      hosts:
      - stillinbeta.com
      - www.stillinbeta.com
  rules:
  - host: stillinbeta.com
    http:
      paths:
      - backend:
          serviceName: sibcom2-service
          servicePort: 80
  - host: www.stillinbeta.com
    http:
      paths:
      - backend:
          serviceName: sibcom2-service
          servicePort: 80
